--- a/my-app/package.json
+++ b/my-app/package.json
@@ -60,5 +60,6 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0",
     "pre-commit": "^1.2.2"
-  }
+  },
+  "proxy": "http://localhost:3001/API"
 }
