--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "firebase": "^5.3.0",
     "history": "4.7.2",
     "hoek": "^5.0.3",
+    "immutable": "^3.8.2",
     "jsonwebtoken": "^8.3.0",
     "moment": "2.22.1",
     "mysql": "^2.15.0",
