--- a/my-app/package.json
+++ b/my-app/package.json
@@ -29,6 +29,7 @@
     "react-chartist": "0.13.1",
     "react-datetime": "2.14.0",
     "react-dom": "16.4.0",
+    "react-geolocated": "^2.4.0",
     "react-geolocation": "^1.0.4",
     "react-google-maps": "9.4.5",
     "react-jvectormap": "0.0.3",
