--- a/server-api/package.json
+++ b/server-api/package.json
@@ -10,22 +10,23 @@
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.4",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "global": "^4.3.2",
-	"hoek": "^5.0.3",
+    "google-distance": "^1.0.1",
+    "hoek": "^5.0.3",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.3.0",
     "morgan": "~1.9.0",
     "mysql": "^2.15.0",
-    "serve": "^9.1.2",
-    "google-distance": "^1.0.1",
     "mysql2": "^1.5.3",
-    "sequelize": "^4.38.0"
+    "sequelize": "^4.38.0",
+    "serve": "^9.1.2"
   },
   "devDependencies": {
-    "nodemon": "^1.17.5",
-	"newman": "^3.10.0"
+    "newman": "^3.10.0",
+    "nodemon": "^1.17.5"
   }
 }
